# youtube_sum

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  GUIDE.md  README.md  TASK.md  docker-compose.yml  main.py  pyproject.toml  streamlit_app.py
api/: __init__.py  routes.py
app/: __init__.py  config.py  database.py
services/: __init__.py  chapter_service.py  export_service.py  history_service.py  notes_service.py  summarization_service.py  transcript_service.py  translation_service.py  youtube_service.py
tests/: __init__.py  conftest.py  test_api.py  test_chapter_service.py  test_export_service.py  test_history_service.py  test_notes_service.py  test_summarization_service.py  test_transcript_service.py  test_translation_service.py  test_youtube_service.py
