[project]
name = "youtube_sum"
version = "0.1.0"
description = "YouTube Summarization Agent — summarize videos with local LLMs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.36.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "requests>=2.32.0",
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2024.7.1",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
packages = ["app", "api", "services"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = [
    "B904",  # raise from in except — intentional for HTTP exception conversion
    "N806",  # uppercase mock variables in tests (conventional for MockXxx)
    "SIM105",  # contextlib.suppress — try/except/pass is more readable here
    "SIM108",  # ternary operator — if/else is more readable here
    "E501",  # line too long — many long strings in prompts and URLs
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app", "services", "api"]
